hphp/hack/test/typecheck/xhp_attr_23.php
<?hh // strict

class :foo {}

function main(): void {
  $x = <foo bar="baz" />; // undefined attribute
}
